Added methods to ceck if a movement is valid without executing it